# preplib

./: .gitmodules  README.md  indexer.py  pyproject.toml  setup.py
.github/workflows/: run-indexer.yml
extract_lib/: extract.py  index.py  main.py
extract_lib/scripts/: build-id  build-id.c
indexer/: ubuntu.py
prepare_lib/: main.py
src/extract_lib/: utils.py
src/extract_lib/scripts/: Makefile
src/extractlib/: extract.py  index.py  logger.py  main.py  utils.py
src/patchlib/: main.py
src/preplib/: extract.py  index.py  logger.py  main.py  utils.py
